# automatic-time-tracking-app

./: .gitignore  CHANGELOG.md  README.md  config.json  pyproject.toml  requirements.txt  run_time_tracker.pyw
scripts/: build.ps1
src/time_tracker/: __init__.py  __main__.py  app.py  config.py  event_store.py  excel_exporter.py  logging_utils.py  models.py  session_builder.py  single_instance.py  startup.py  win32_helpers.py  windows_listener.py
tests/: test_config.py  test_excel_exporter.py  test_session_builder.py  test_single_instance.py  test_startup.py
