[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracking-app"
version = "0.2.0"
description = "Windows background time tracker that exports worked intervals to Excel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5,<4.0",
  "pywin32>=306,<307",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[project.scripts]
time-tracker = "time_tracker.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
